--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
+@import url("styles/header.css");
+
 :root{
     --cor-de-fundo: #EBECEE;
+    --branco: #FFF;
 }
 
 body{
     background-color: var(--cor-de-fundo);
-}
-
-h1{
-    background-color:white;
 }
