--- a/styles/banner.css
+++ b/styles/banner.css
@@ -15,3 +15,22 @@
     font-weight: 500;
     margin: 1em 0;
 }
+
+.banner__pesquisa{
+    background-color: transparent;
+    border: 1px solid var(--branco);
+    color: var(--branco);
+    border-radius: 24px;
+    padding: 1em;
+    width: 100%;
+}
+
+.banner__pesquisa::placeholder{                                                                 /* recurso para acessar o texto placeholder e edita-lo */
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--branco);
+    background: url("../img/Lupa.svg") no-repeat;                                                         /* incluindo lupa dentro da barra de pesquisa */
+    background-position: 1em;
+}
