--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";                                                               /*esse fonte foi importada diratamente no html*/
+    --azul: #002F52;
 }
 
 body{
