--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     --azul-degrade: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";                                                               /*esse fonte foi importada diratamente no html*/
     --azul: #002F52;
+    --fonte-secundaria: "Josefin Sans";
+    --preto: #000;
 }
 
 body{
