--- a/styles/header.css
+++ b/styles/header.css
@@ -66,6 +66,10 @@
     display: none;
 }
 
+.container__texto{
+    display: none;
+}
+
 @media screen and (min-width: 1024px) {
 
    .container__titulo, .container__titulo--negrito{
@@ -113,5 +117,28 @@
    .opçoes__botao{
     display: none;
    }
+
+}
+
+@media screen and (min-width: 1728px){
+
+    .container__link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabeçalho{
+        padding: 0 2em;
+    }
+
+    .opçoes{
+        margin-right: auto;
+    }
+
+    .container__texto{
+        display: block;
+    }
 
 }
