--- a/styles/banner.css
+++ b/styles/banner.css
@@ -48,3 +48,19 @@
         background-position: 6em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 10em;
+    }
+
+    .banner{
+        padding: 6em 0;
+    }
+
+}
