--- a/styles/contato.css
+++ b/styles/contato.css
@@ -57,5 +57,12 @@
 
     .contato__titulo{
         font-size: 24px;
+    }    
+}
+
+@media screen and (min-width: 1728px) {
+
+    .contato{
+        padding: 3em 20vw;
     }
 }
